Expand started_at a bit more to avoid wrapping

--- a/assets/src/styles/main.scss
+++ b/assets/src/styles/main.scss
@@ -82,7 +82,7 @@ nav {
   }
   .started-at {
     margin-right: 0.5rem;
-    width: 200px;
+    width: 210px;
   }
 }
 
